--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -312,7 +312,7 @@
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Runs</property>
+                        <property name="label" translatable="yes">Races</property>
                         <property name="use_underline">True</property>
                       </widget>
                     </child>
@@ -402,7 +402,7 @@
               <widget class="GtkMenuItem" id="menuitem_mode_selected_runs_simple">
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Runs simple</property>
+                <property name="label" translatable="yes">Races simple</property>
                 <property name="use_underline">True</property>
               </widget>
             </child>
@@ -410,7 +410,7 @@
               <widget class="GtkMenuItem" id="menuitem_mode_selected_runs_intervallic">
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Runs intervallic</property>
+                <property name="label" translatable="yes">Races intervallic</property>
                 <property name="use_underline">True</property>
               </widget>
             </child>
@@ -885,7 +885,7 @@
                                   <widget class="GtkLabel" id="label59">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Runs</property>
+                                    <property name="label" translatable="yes">Races</property>
                                   </widget>
                                   <packing>
                                     <property name="left_attach">1</property>
@@ -1115,7 +1115,7 @@
                                                   <widget class="GtkLabel" id="label_selector_start_runs_simple">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
-                                                    <property name="label">Tests have 1 track</property>
+                                                    <property name="label">Tests have 1 lap</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -1186,7 +1186,7 @@
                                                   <widget class="GtkLabel" id="label_selector_start_runs_intervallic">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
-                                                    <property name="label">Tests have &gt;1 track</property>
+                                                    <property name="label">Tests have &gt;1 lap</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -1564,12 +1564,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkButton" id="button_crash">
-                                    <property name="label">CRASH_ME
-(debug purposes)</property>
+                                  <widget class="GtkButton" id="button_carles">
+                                    <property name="label">Button
+Carles</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
-                                    <signal name="clicked" handler="on_debug_crash_activate" swapped="no"/>
+                                    <signal name="clicked" handler="on_button_carles_clicked" swapped="no"/>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1578,12 +1578,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkButton" id="button_carles">
-                                    <property name="label">Button
-Carles</property>
+                                  <widget class="GtkButton" id="button_crash">
+                                    <property name="label">CRASH_ME
+(debug purposes)</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
-                                    <signal name="clicked" handler="on_button_carles_clicked" swapped="no"/>
+                                    <signal name="clicked" handler="on_debug_crash_activate" swapped="no"/>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -3535,7 +3535,7 @@ Carles</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Add run type</property>
+                                                            <property name="tooltip" translatable="yes">Add race type</property>
                                                             <signal name="clicked" handler="on_run_simple_type_add_activate" swapped="no"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image33">
@@ -3558,7 +3558,7 @@ Carles</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Delete run type</property>
+                                                            <property name="tooltip" translatable="yes">Delete race type</property>
                                                             <signal name="clicked" handler="on_run_type_delete_simple" swapped="no"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image_run_type_delete_simple">
@@ -3744,7 +3744,7 @@ Carles</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Add run type</property>
+                                                            <property name="tooltip" translatable="yes">Add race type</property>
                                                             <signal name="clicked" handler="on_run_intervallic_type_add_activate" swapped="no"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image3213">
@@ -3767,7 +3767,7 @@ Carles</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Delete run type</property>
+                                                            <property name="tooltip" translatable="yes">Delete race type</property>
                                                             <signal name="clicked" handler="on_run_type_delete_intervallic" swapped="no"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image_run_type_delete_intervallic">
@@ -4083,7 +4083,7 @@ Carles</property>
                                                             <widget class="GtkLabel" id="label_extra_window_radio_multichronopic_run_analysis">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label" translatable="yes">Run analysis</property>
+                                                            <property name="label" translatable="yes">Race analysis</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
@@ -5373,7 +5373,7 @@ after time</property>
                                                             <widget class="GtkLabel" id="extra_window_runs_interval_label_distance">
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">Track distance
+                                                            <property name="label" translatable="yes">Lap distance
 (between platforms)</property>
                                                             </widget>
                                                             <packing>
@@ -9737,7 +9737,7 @@ after time</property>
                                                             <widget class="GtkLabel" id="label96">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label" translatable="yes">Run</property>
+                                                            <property name="label" translatable="yes">Race</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="position">2</property>
@@ -9983,7 +9983,7 @@ after time</property>
                                                             <widget class="GtkLabel" id="label97">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label" translatable="yes">Run Intervallic</property>
+                                                            <property name="label" translatable="yes">Race Intervallic</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="position">3</property>
@@ -18141,6 +18141,9 @@ Concentric</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
