--- a/glade/report_window.glade
+++ b/glade/report_window.glade
@@ -123,7 +123,7 @@
                         </child>
                         <child>
                           <widget class="GtkCheckButton" id="cb_runs_interval_with_subruns">
-                            <property name="label" translatable="yes">Include tracks</property>
+                            <property name="label" translatable="yes">Include laps</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -209,7 +209,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Runs</property>
+                            <property name="label" translatable="yes">Races</property>
                           </widget>
                           <packing>
                             <property name="top_attach">2</property>
