--- a/glade/run_type_add.glade
+++ b/glade/run_type_add.glade
@@ -6,7 +6,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
-    <property name="title" translatable="yes">Create new Run Type</property>
+    <property name="title" translatable="yes">Create new race type</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
@@ -20,7 +20,7 @@
           <widget class="GtkLabel" id="label132">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Create a new run type in the database</property>
+            <property name="label" translatable="yes">Create a new race type in the database</property>
           </widget>
           <packing>
             <property name="expand">False</property>
@@ -178,7 +178,7 @@ options</property>
                     <property name="can_focus">False</property>
                     <child>
                       <widget class="GtkRadioButton" id="radiobutton_limited_tracks">
-                        <property name="label" translatable="yes">tracks</property>
+                        <property name="label" translatable="yes">laps</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
@@ -447,7 +447,7 @@ options</property>
                     </child>
                     <child>
                       <widget class="GtkRadioButton" id="radiobutton_dist_different">
-                        <property name="label" translatable="yes">Different (each track have different distance
+                        <property name="label" translatable="yes">Different (each lap have different distance
 suitable for agility tests and RSA)</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -482,7 +482,7 @@ suitable for agility tests and RSA)</property>
                                   <widget class="GtkLabel" id="label547">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Number of different tracks</property>
+                                    <property name="label" translatable="yes">Number of different laps</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -543,7 +543,7 @@ suitable for agility tests and RSA)</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">Distance of each track</property>
+                                    <property name="label" translatable="yes">Distance of each lap</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
