--- a/glade/dialog_server_stats.glade
+++ b/glade/dialog_server_stats.glade
@@ -58,7 +58,7 @@
                   <widget class="GtkLabel" id="label553">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Evaluators</property>
+                    <property name="label">Evaluators</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -109,7 +109,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">In server</property>
+                            <property name="label">In server</property>
                           </widget>
                           <packing>
                             <property name="left_attach">1</property>
@@ -123,7 +123,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Uploaded
+                            <property name="label">Uploaded
 by you</property>
                           </widget>
                           <packing>
@@ -138,7 +138,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Sessions</property>
+                            <property name="label">Sessions</property>
                           </widget>
                           <packing>
                             <property name="top_attach">1</property>
@@ -152,7 +152,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Persons</property>
+                            <property name="label">Persons</property>
                           </widget>
                           <packing>
                             <property name="top_attach">2</property>
@@ -1226,6 +1226,9 @@ by you</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -1234,7 +1237,7 @@ by you</property>
                   <widget class="GtkLabel" id="label555">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">General data</property>
+                    <property name="label">General data</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -1284,7 +1287,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">In server</property>
+                            <property name="label">In server</property>
                           </widget>
                           <packing>
                             <property name="left_attach">1</property>
@@ -1298,7 +1301,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Uploaded
+                            <property name="label">Uploaded
 by you</property>
                           </widget>
                           <packing>
@@ -1313,7 +1316,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Jumps</property>
+                            <property name="label">Jumps</property>
                           </widget>
                           <packing>
                             <property name="top_attach">1</property>
@@ -1327,7 +1330,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Reactive jumps</property>
+                            <property name="label">Reactive jumps</property>
                           </widget>
                           <packing>
                             <property name="top_attach">2</property>
@@ -1341,7 +1344,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Runs</property>
+                            <property name="label">Runs</property>
                           </widget>
                           <packing>
                             <property name="top_attach">3</property>
@@ -1355,7 +1358,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Intervallic runs</property>
+                            <property name="label">Intervallic runs</property>
                           </widget>
                           <packing>
                             <property name="top_attach">4</property>
@@ -1369,7 +1372,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Reaction times</property>
+                            <property name="label">Reaction times</property>
                           </widget>
                           <packing>
                             <property name="top_attach">5</property>
@@ -1383,7 +1386,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Pulses</property>
+                            <property name="label">Pulses</property>
                           </widget>
                           <packing>
                             <property name="top_attach">6</property>
@@ -1577,7 +1580,7 @@ by you</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">MultiChronopic</property>
+                            <property name="label">MultiChronopic</property>
                           </widget>
                           <packing>
                             <property name="top_attach">7</property>
@@ -2621,6 +2624,9 @@ by you</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -2629,7 +2635,7 @@ by you</property>
                   <widget class="GtkLabel" id="label556">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Tests</property>
+                    <property name="label">Tests</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
