--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -5374,7 +5374,7 @@ after time</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
                                                             <property name="label" translatable="yes">Lap distance
-(between platforms)</property>
+(between barriers)</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
