--- a/glade/preferences_win.glade
+++ b/glade/preferences_win.glade
@@ -1795,7 +1795,7 @@ It starts before and arrives there with some speed.</property>
                                             <child>
                                               <widget class="GtkHBox" id="hbox_encoder_capture_fully_extended">
                                                 <property name="can_focus">False</property>
-                                                <property name="tooltip" translatable="yes">Is string is not extended by this value or more, signal will be corrected.</property>
+                                                <property name="tooltip" translatable="yes">If string is not extended by this value or more, signal will be corrected.</property>
                                                 <property name="spacing">10</property>
                                                 <child>
                                                   <widget class="GtkLabel" id="label56">
